--- a/my-app/src/app/core/components/proyectos/proyectos.component.html
+++ b/my-app/src/app/core/components/proyectos/proyectos.component.html
@@ -36,7 +36,7 @@
             <img src="../../../../assets/images/proyecto/Proyecto2.jpg" alt="">
             <div class="info">
               <h5 data-toggle="modal" data-target="#myModal2">Descripción Proyecto 2</h5>
-              <p><a href="#"target="_blank">Mas información...</a></p>
+              <p><a href="https://github.com/AleSVillegas/ProyectoFinal.FrontEnd"target="_blank">Mas información...</a></p>
             </div>
           </div>
         </div>
