--- a/my-app/src/app/core/components/login/login.component.css
+++ b/my-app/src/app/core/components/login/login.component.css
@@ -18,3 +18,15 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
     }
+
+    .ng-valid:not(input),
+    .ng-valid:not(textarea) {
+      border-color: rgb(0, 255, 0);
+      border-width: 5px;
+    }
+    
+    .ng-invalid:not(input),
+    .ng-invalid:not(textarea) {
+      border-color: rgb(254, 7, 7);
+      border-width: 5px;
+    }
