--- a/my-app/src/app/core/components/login/login.component.html
+++ b/my-app/src/app/core/components/login/login.component.html
@@ -11,6 +11,43 @@
             <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
 
               <div class="form-outline form-white mb-3">
+                <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg"
+                  [(ngModel)]="nombreUsuario" required [ngClass]="{'ng-valid': f.controls['nombreUsuario']?.valid, 'ng-invalid': f.controls['nombreUsuario']?.invalid}" />
+                <label class="form-label" for="nombreUsuario">Usuario</label>
+                <div *ngIf="f.controls['nombreUsuario']?.errors?.['required'] && f.controls['nombreUsuario']?.touched" class="text-danger">El usuario es requerido</div>
+                <div *ngIf="f.controls['nombreUsuario']?.invalid && f.controls['nombreUsuario']?.dirty && !f.controls['nombreUsuario']?.errors?.['required']" class="text-danger">Usuario incorrecto</div>
+              </div>
+            
+              <div class="form-outline form-white mb-3">
+                <input type="password" id="password" name="password" class="form-control form-control-lg"
+                  [(ngModel)]="password" required [ngClass]="{'ng-valid': f.controls['password']?.valid, 'ng-invalid': f.controls['password']?.invalid}" #passwordInput />
+                <label class="form-label" for="password">Password</label>
+                <div *ngIf="f.controls['password']?.errors?.['required'] && f.controls['password']?.touched" class="text-danger">La contraseña es requerida</div>
+                <div *ngIf="f.controls['password']?.invalid && f.controls['password']?.dirty && !f.controls['password']?.errors?.['required']" class="text-danger">Contraseña incorrecta</div>
+              </div>
+            
+              <div *ngIf="showInvalidCredentialsError"  class="text-danger">Nombre de usuario o contraseña incorrectos</div>
+            
+              <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="showPassword" (change)="togglePasswordVisibility()" />
+                <label class="form-check-label" for="showPassword">Mostrar contraseña</label>
+              </div>
+            
+              <button class="btn btn-outline-light btn-lg px-4" type="submit">Aceptar</button>
+            
+            </form>
+   
+            
+            
+            
+            
+            
+            
+            
+
+            <!--<form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+
+              <div class="form-outline form-white mb-3">
                 <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" [(ngModel)]="nombreUsuario" required />
                 <label class="form-label" for="nombreUsuario">Usuario</label>
               </div>
@@ -24,7 +61,7 @@
 
             </form>
 
-            <p class="mb-0 mt-3">¿No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a></p>
+            <p class="mb-0 mt-3">¿No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a></p>-->
 
           </div>
         </div>
