--- a/my-app/src/app/core/components/experiencia/experiencia.component.html
+++ b/my-app/src/app/core/components/experiencia/experiencia.component.html
@@ -27,7 +27,8 @@
       </div>
 </div>-->
 
-<!-- Código para mostrar cuando el usuario está logueado--> 
+
+<!-- Código para mostrar cuando el usuario está logueado-->
 <div class="d-flex justify-content-center align-items-center" style="min-height: 80vh" id="fondo-exp">
   <div class="card container mt-2 px-0 mb-3">
     <div class="card-header text-center">
@@ -43,16 +44,20 @@
         <div class="col-lg-12">
           <div class="d-flex align-items-center justify-content-center flex-column" *ngIf="!isLogged">
             <h5 class="mb-4">Universidad Provincial de Oficios "Eva Perón"</h5>
-            <p class="mb-1 text-center">Auxiliar de la carrera de Robótica </p>
+            <p class="mb-1 text-center">Auxiliar de la carrera de Robótica
+            </p>
             <p class="mb-0 text-justify">
-              <strong class="underline">Tareas realizadas:</strong><br>
+              <strong class="underline">Tareas realizadas:</strong>
+              <br>
               Participación en la organización y presentación del stand de la universidad en la Expo Rural N°91.<br>
-              Colaboración en la exposición de los programas educativos de la universidad, respondiendo preguntas sobre la carrera
-              de Robótica y sus contenidos a los visitantes del evento. Brindando además soporte en la atención a los interesados, en
-              obtener más información sobre la  universidad y sus programas educativos. 
+              Colaboración en la exposición de los programas educativos de la universidad, respondiendo preguntas sobre
+              la carrera
+              de Robótica y sus contenidos a los visitantes del evento. Brindando además soporte en la atención a los
+              interesados, en
+              obtener más información sobre la universidad y sus programas educativos.
             </p>
             <p class="mb-0 text-center">09/2022 - 10/2022</p>
-            <hr>     
+            <hr>
           </div>
           <table *ngIf="isLogged">
             <tbody>
@@ -61,7 +66,7 @@
                   <div class="d-flex align-items-center">
                     <h5 class="mr-2">
                       {{Experiencia.nombreE}}
-                      <button class="btn btn-light mr-2" routerLink="/editexp/{{Experiencia.id}}"*ngIf="isLogged">
+                      <button class="btn btn-light mr-2" routerLink="/editexp/{{Experiencia.id}}" *ngIf="isLogged">
                         <i class="bi bi-pencil-fill" ngbTooltip="Editar Experiencia"></i>
                       </button>
                       <button class="btn btn-light" (click)="delete(Experiencia.id)" *ngIf="isLogged">
@@ -80,5 +85,3 @@
     </div>
   </div>
 </div>
-  
-  
